clusters/k3s-cluster/files/file-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files
  namespace: files
spec:
  selector:
    matchLabels:
      app: files
  template:
    metadata:
      labels:
        app: files
    spec:
      containers:
        - name: files
          image: filebrowser/filebrowser:s6
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /srv
              name: srvpvc
            - mountPath: /database
              name: databasepvc
            - mountPath: /config
              name: configpvc
      volumes:
        - name: srvpvc
          persistentVolumeClaim:
            claimName: srvfilespvc
        - name: databasepvc
          persistentVolumeClaim:
            claimName: databasefilespvc
        - name: configpvc
          persistentVolumeClaim:
            claimName: configfilespvc
---
apiVersion: v1
kind: Service
metadata:
  name: files
  namespace: files
spec:
  selector:
    app: files
  ports:
    - port: 55964
      targetPort: 80
      name: files

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files
  namespace: files
  labels:
    name: files
spec:
  rules:
    - host: files.jacobbanghart.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: files
                port:
                  number: 55964
